<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg"
    tools:context=".MainActivity">
    <ImageView
        android:id="@+id/scooter"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:contentDescription="@string/big_main_title1"
        android:layout_marginTop="-36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/scooter"/>

    <TextView
        android:id="@+id/first_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/big_main_title1"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@id/scooter"></TextView>
    <TextView
        android:id="@+id/second_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/big_main_title2"
        android:textStyle="bold"
        android:textSize="32sp"
        app:layout_constraintTop_toBottomOf="@id/first_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
></TextView>
    <TextView
        android:id="@+id/sec_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seconday_main_title1"
        android:textStyle="normal"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/second_text"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
    ></TextView>

    <TextView
        android:id="@+id/last_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/secondary_main_title2"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sec_text"

        ></TextView>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="24dp"
        android:layout_marginLeft="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/button"
        android:layout_marginTop="16dp"
        android:text="@string/signow"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:textColor="#fff"
        android:background="@drawable/shape_signup"
        app:layout_constraintTop_toBottomOf="@id/last_txt">

    </androidx.appcompat.widget.AppCompatButton>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:layout_marginTop="-36dp"
        app:layout_constraintBottom_toBottomOf="parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/noacc"
            android:textSize="16sp"></TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign"
            android:layout_marginLeft="16dp"
            android:textSize="16sp"
            android:textColor="@color/button_color"
            android:textStyle="bold"
            >

        </TextView>

    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>




